--- a/supporters.html
+++ b/supporters.html
@@ -22,12 +22,15 @@
       </div>
     </nav>
     <div class="container">
-      <h1 class="page-title">Get Involved To Be Featured On The Hub</h1>
+      <h1 class="page-title">Get Involved To Be Featured On The Connector</h1>
       <div class="partners-lists-container">
         <h2 class="fg-mblue">Critera for data holders</h2>
         <ul class="partners-list">
           <li>
             <h6>Enable patients/members to view and download their records online</h6>
+          </li>
+          <li>
+            <h6>Add or update your organization through the <a class="fg-daqua fw-strong" href='update-provider.html'>provider form</a></h6>
           </li>
         </ul>
         <h2 class="fg-mblue">Critera for data receivers</h2>
@@ -37,6 +40,9 @@
           </li>
           <li>
             <h6>App must be transparent with user about data security/privacy</h6>
+          </li>
+          <li>
+            <h6>Add or update your app through the <a class="fg-daqua fw-strong" href='update-receiver.html'>receiver form</a></h6>
           </li>
         </ul>
         <h2 class="fg-mblue">Critera for supporting organizations</h2>
