--- a/developers.html
+++ b/developers.html
@@ -16,8 +16,8 @@
       <div class="container">
         <div class="navbar-header"><a href="index.html" class="navbar-brand logo bb-logotype"><img src="img/bb-logo-depth-small.jpg" class="little-logo">Blue Button</a></div>
         <ul class="top-nav nav navbar-nav pull-right hidden-xs">
-          <li><a href="findrecords.html">Get my records</a></li>
-          <li><a href="userecords-1.html">Use my records</a></li>
+          <li><a href="findrecords.html">Organizations participating</a></li>
+          <li><a href="userecords-1.html">3<sup>rd</sup> party apps</a></li>
         </ul>
       </div>
     </nav>
@@ -37,16 +37,16 @@
     </div>
     <div class="section footer">
       <div class="container">
-        <ul class="list-inline inline">
-          <li class="hidden-xs force-inline"><img src="img/bb-logo-depth-small-greybg.jpg" class="little-logo"></li>
-          <li><a href="#">About</a></li>
-          <li>|</li>
-          <li class="hidden-xs force-inline"><a href="supporters.html">Supporters</a></li>
+        <ul class="footer-links list-inline inline">
+          <li><a href="supporters.html">Supporters</a></li>
           <li class="hidden-xs force-inline">|</li>
-          <li><a href="privacy.html">Privacy</a></li>
-          <li>|</li>
           <li><a href="developers.html">Developers</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Privacy.html">Privacy</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Disclaimer.html">Disclaimer</a></li>
         </ul>
+        <p class="fs-xxsmall">This project was funded by a contract from the <a class='td-underline' href="http://www.hhs.gov/healthit/">Office of the National Coordinator for Health Information Technology (ONC)</a></p>
       </div>
     </div>
     <script>
