--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
     <script src="js/bbhub-combined.min.js"></script>
   </head>
   <body>
-    <div id="header" class="bb-onc-header">
-      <ul class="top-nav nav nav-pills pull-right hidden-xs">
-        <li><a href="findrecords.html">Get my records</a></li>
-        <li><a href="userecords-1.html">Use my records</a></li>
-      </ul>
-      <h6 class="onc-tagline fg-white"><img src="img/bb-onc@2x.png" class="bb-onc-logo">
-      </h6>
-    </div>
+    <div class="alert alert-warning alert-slim">This website is work in progress.&nbsp;<a href="#wip-modal" data-toggle="modal" class="alert-link">Read more...</a></div>
     <div id="vid-modal" class="modal fade">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -38,11 +31,27 @@
         </div>
       </div>
     </div>
+    <div id="wip-modal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" tabindex="-1" role="dialog" aria-hidden="true" class="close">&times;</button>
+            <h4 class="modal-title">Under Construction</h4>
+          </div>
+          <div class="modal-body text-center">
+            <p><img src="img/digger.gif"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" data-dismiss="modal" class="btn btn-primary">Okay</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="section splash-section">
       <div class="splash-img-wrapper"></div>
       <div class="splash-title text-center">
         <h1 class="h2">Introducing Blue Button Connector:<br>Online access to your health records</h1><a href="findrecords.html" class="btn btn-lg btn-primary">Get Started</a>
-        <h6 class="h6 alt-use visible-xs">or&nbsp;<a href="userecords-1.html" class="show-xs">use my records</a></h6>
+        <h6 class="h6 alt-use">or&nbsp;<a href="userecords-1.html" class="fw-strong">view 3rd party apps</a></h6>
       </div><a href="#why-bb" class="next-btn text-center fg-dblue hidden-xs">next<br><i class="fa fa-chevron-down"></i></a>
     </div>
     <div class="section why-bb">
@@ -79,43 +88,7 @@
             <h5 class="fg-white fw-normal">with your doctor or someone else you trust, when traveling, seeking a second opinion, moving, switching insurance, or in case of emergency.</h5>
           </div>
         </div>
-      </div><a href="#get-started" class="next-btn text-center fg-white hidden-xs">next<br><i class="fa fa-chevron-down"></i></a>
-    </div>
-    <div class="section get-started">
-      <div id="get-started" class="container-inner text-center">
-        <h2 class="h1">Stay in control of your health</h2>
-        <h2 class="fg-maqua fw-normal">&hellip;in three easy steps:</h2>
-        <div class="row">
-          <div class="col-sm-4 circ-col start-find">
-            <div class="wrap-outer-icon">
-              <div class="wrap-icon text-center">
-                <h4 class="step-num fg-white">1</h4>
-              </div>
-            </div>
-            <h3 class="fg-daqua">Find It</h3>
-            <h5 class="fg-dgrey fw-normal">See if your physician, hospital, pharmacy, lab, or health insurance offers Blue Button.</h5>
-          </div>
-          <div class="col-sm-4 circ-col start-download">
-            <div class="wrap-outer-icon">
-              <div class="wrap-icon text-center">
-                <h4 class="step-num fg-white">2</h4>
-              </div>
-            </div>
-            <h3 class="fg-dblue">Get It</h3>
-            <h5 class="fg-dgrey fw-normal">Start compiling your health data from your various health care providers.</h5>
-          </div>
-          <div class="col-sm-4 circ-col start-use">
-            <div class="wrap-outer-icon">
-              <div class="wrap-icon text-center">
-                <h4 class="step-num fg-white">3</h4>
-              </div>
-            </div>
-            <h3 class="fg-mblue">Use It</h3>
-            <h5 class="fg-dgrey fw-normal">Plug it into third party apps and services that help keep you at your best.</h5>
-          </div>
-        </div>
-        <h2><a href="findrecords.html" class="btn btn-large btn-primary">Get started</a></h2>
-      </div><a href="#testimonials" class="next-btn text-center fg-daqua hidden-xs">next<br><i class="fa fa-chevron-down"></i></a>
+      </div><a href="#testimonials" class="next-btn text-center fg-white hidden-xs">next<br><i class="fa fa-chevron-down"></i></a>
     </div>
     <div class="section testimonials">
       <div id="testimonials" class="container text-center">
@@ -157,16 +130,16 @@
     </div>
     <div class="section footer">
       <div class="container">
-        <ul class="list-inline inline">
-          <li class="hidden-xs force-inline"><img src="img/bb-logo-depth-small-greybg.jpg" class="little-logo"></li>
-          <li><a href="#">About</a></li>
-          <li>|</li>
-          <li class="hidden-xs force-inline"><a href="supporters.html">Supporters</a></li>
+        <ul class="footer-links list-inline inline">
+          <li><a href="supporters.html">Supporters</a></li>
           <li class="hidden-xs force-inline">|</li>
-          <li><a href="privacy.html">Privacy</a></li>
-          <li>|</li>
           <li><a href="developers.html">Developers</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Privacy.html">Privacy</a></li>
+          <li class="hidden-xs force-inline">|</li>
+          <li><a href="http://www.hhs.gov/Disclaimer.html">Disclaimer</a></li>
         </ul>
+        <p class="fs-xxsmall">This project was funded by a contract from the <a class='td-underline' href="http://www.hhs.gov/healthit/">Office of the National Coordinator for Health Information Technology (ONC)</a></p>
       </div>
     </div>
     <script>
