--- a/records.html
+++ b/records.html
@@ -75,8 +75,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
@@ -238,8 +237,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
@@ -266,8 +264,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
@@ -291,8 +288,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
@@ -315,8 +311,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
@@ -331,8 +326,7 @@
 <div class="tab-content col-sm-12 col-md-6">
   <div class="no-data">
     <h4>Don't see your organization listed?</h4>
-    <h6>You may have a legal right under HIPAA to get your health records electronically. Download and send&nbsp;<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">this form letter (PDF)</a>.
-    </h6>
+    <h6>Let them know you have a legal right to your records under HIPAA (<a href="http://www.hhs.gov/ocr/privacy/hipaa/understanding/consumers/righttoaccessmemo.pdf" target="_blank" class="not-listed-learn-more fw-strong fg-mblue">see this letter for details</a>).</h6>
   </div>
 </div></div>
         </div>
