--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="section splash-section bg-white"><img src="img/bb-logo-depth.jpg" class="logo-big">
+    <div class="section splash-section bg-white"><img src="img/bb-logo-depth.jpg" class="logo-big" alt="Blue Button Logo">
       <ul class="top-nav nav nav-pills pull-right">
         <li><a href="records">Health Records</a></li>
         <li><a href="apps">Apps</a></li>
